# rust-template

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  PROJECT_STRUCTURE.txt  QUEUE_AGENTS.md  QUICKSTART.md  README.md  docker-compose.yml
migrations/: 20240101000001_create_users_table.sql
scripts/: migrate.sh
src/: main.rs
src/config/: app_config.rs  app_state.rs  database.rs  mod.rs  mqtt_config.rs  redis_config.rs
src/dto/: mod.rs  user_dto.rs
src/handlers/: auth_handler.rs  health_handler.rs  mod.rs  user_handler.rs
src/interceptors/: error.rs  mod.rs  response.rs
src/middleware/: auth.rs  logging.rs  mod.rs
src/models/: user.rs
src/queue/: job.rs  mod.rs  queue_service.rs
src/routes/: mod.rs
src/services/: email_service.rs  mod.rs  mqtt_service.rs  redis_service.rs  user_service.rs
src/utils/: mod.rs  password.rs  validation.rs
