[package]
name = "rust-backend-template"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1.42", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "mysql", "sqlite", "chrono", "uuid", "migrate"] }
sea-query = "0.32"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "streams"] }
deadpool-redis = "0.18"

# JWT & Authentication
jsonwebtoken = "9.3"
bcrypt = "0.15"

# Validation
validator = { version = "0.18", features = ["derive"] }

# UUID & Time
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Environment
dotenv = "0.15"
config = "0.14"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# MQTT
rumqttc = "0.24"

# Async traits
async-trait = "0.1"

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

# Utilities
once_cell = "1.20"
bytes = "1.9"

[dev-dependencies]
mockall = "0.13"
